Remove version tracking of ApplicantApproval and associated models
In the past, we used a Django plugin called Reversion to track the
change history of initial applications. This was designed to help us
track changes to the initial application essays, when we asked for essay
revisions.

Over time, the version control tracking spread to different models
related to the ApplicantApproval model.

Now that we're trying to remove sensitive information when an initial
application is processed, we need to stop tracking the version history
of those models.

Remove version history tracking of:

 - ApplicantApproval
 - BarriersToParticipation (essays and location)
 - SchoolInformation (which is an inline in the Django admin view of
   ApplicantApproval)

Add a test to ensure sensitive initial application data is not under
revision control. Remove forced revision history creation from prior
tests.

--- a/home/templates/home/applicant_review_detail.html
+++ b/home/templates/home/applicant_review_detail.html
@@ -140,7 +140,7 @@
 	{% if not application.barrierstoparticipation %}
 		<p>The essay answers have been removed after initial application processing.</p>
 	{% else %}
-		{% for field, answer in application.barrierstoparticipation.get_original_answers %}
+		{% for field, answer in application.barrierstoparticipation.get_answers %}
 		<div class="card mb-3">
 			<div class="card-header">Q{{ forloop.counter }}. {{ field.verbose_name }}</div>
 			<div class="card-body">
