Introduce separate time policies for students and non-students
For some rounds, we may need to want to require a different number of
days free from full-time commitments for students and non-students. The
current motivating factor for this change is that Brazilian students in
public universities have shifted school terms due to COVID-19.

Display information about different free time requirements on the
eligibility rules page, eligibility results, and various time displays
for Outreachy organizers, mentors, and coordinators.

For mentors, display a percentage of time free. Tell them they should
consider whether an applicant is a strong one before accepting an
applicant with less than 60% days free.

For applicants, hide calculations of days free from the eligibility
results page. This just leads them to submit additional applications and
change their school term dates from the official term dates.

Allow home/test_eligibility.py to be run on its own, by changing it from
a SimpleTestCase class to a TestCase class.

--- a/home/templates/home/applicant_review_detail.html
+++ b/home/templates/home/applicant_review_detail.html
@@ -52,12 +52,12 @@
 		</li>
 	{% with tcs=application.get_time_commitments %}
 		<li>
-			{% if tcs.longest_period_free < 49 %}
+			{% if tcs.longest_period_free < application.required_days_free %}
 				<span class="badge badge-warning">Warning</span> Time eligibility: <b>No</b>, applicant has
 			{% else %}
 				Time eligibility: <b>Yes</b>, applicant has
 			{% endif %}
-			{{ tcs.longest_period_free }} days free / {{ tcs.internship_total_days.days }} days total. Applicants are required to have 49 days free.
+			{{ tcs.longest_period_free }} days free / {{ tcs.internship_total_days.days }} days total. This applicant is required to have {{ application.required_days_free }} days free.
 		</li>
 		{% if tcs.employment_time_commitments %}
 			<li><span class="badge badge-warning">Warning</span> Applicant has a part-time job.</li>
