--- a/home/templates/home/schoolinformation_form.html
+++ b/home/templates/home/schoolinformation_form.html
@@ -20,12 +20,7 @@ Update Your School Information
 			information about your school terms and academic
 			calendar.</p>
 			
-			<p>Students in the northern hemisphere are only
-			eligible for the May to August internship round.
-			Students in the southern hemisphere are only eligible
-			for the December to March internship round. Applicants
-			near the equator need to have 49 consecutive days free
-			from school commitments.</p>
+			{% include 'home/snippet/student_hemisphere.html' %}
 
 			<p>We have observed that some students make the following common mistakes:
 			</p>
@@ -57,7 +52,7 @@ Update Your School Information
 
 			<p><b>Please ensure that the term start and end dates
 			match the dates on your academic calendar</b>. We cannot
-			make exceptions for starting clases late. Your
+			make exceptions for starting classes late. Your
 			application will be rejected if the term start date
 			does not match your academic calendar's date for the
 			start of classes. Your application will be rejected if
