Make diversity statement on eligibility page stronger
Show statistics about past interns based on the 2019 longitudinal study.
Display a black woman photo from Women of color in tech chat stock
photos. (TODO - replace with photo of Outreachy alum with their
permission?)

--- a/home/templates/home/snippet/diversity_statement.html
+++ b/home/templates/home/snippet/diversity_statement.html
@@ -1,1 +1,41 @@
-<p>Outreachy expressly invites applicants who are women (both cis and trans), trans men, and genderqueer people to apply. We also expressly invite applications who are residents and nationals of the United States of America of any gender who are Black/African American, Hispanic/Latin@, Native American/American Indian, Alaska Native, Native Hawaiian, or Pacific Islander. Anyone who faces systemic bias or discrimination in the technology industry of their country is invited to apply.</p>
+{% load static %}
+<div class="container">
+	<div class="row align-items-center justify-content-center">
+		<div class="col-5 align-self-center">
+			<img src="{% static 'img/183-cc-by-2_0-WOCinTech-Chat.jpg' %}" alt="cc-by 2.0 WOCinTech-Chat" class="img-fluid align-self-start">
+			<p><i>Photo CC BY 2.0 WOCinTech Chat</i></p>
+		</div>
+
+		<div class="col-7">
+			<p>
+			Outreachy is open to applicants around the world.
+			</p>
+			<p>
+			<b>We invite people to apply who face systemic bias or discrimination</b> in the technology industry of their country.
+			</p>
+
+		</div>
+	</div>
+	<div class="row">
+		<div class="col">
+			<p>
+			Outreachy expressly invites applicants who are women (both cis and trans), trans men, non-binary people, and genderqueer people to apply.
+			</p>
+
+			<p>
+			We also expressly invite applications who are residents and nationals of the United States of America of any gender who are Black/African American, Hispanic/Latin@, Native American/American Indian, Alaska Native, Native Hawaiian, or Pacific Islander.
+			</p>
+
+			<p>
+			Past Outreachy interns are:
+			</p>
+			<ul>
+				<li>92% women</li>
+				<li>4% transgender, genderqueer, or non-binary people</li>
+				<li>64% people of color</li>
+				<li>12% people from a historically disadvantaged caste or tribe</li>
+			</ul>
+			<p><i>Statistics are based on responses to the 2019 longitudinal study of Outreachy alums.</i></p>
+		</div>
+	</div>
+</div>
