--- a/home/templates/home/eligibility.html
+++ b/home/templates/home/eligibility.html
@@ -1,7 +1,5 @@
 {% extends "base.html" %}
-
-{% load wagtailcore_tags %}
-{% load wagtailimages_tags %}
+{% load static %}
 
 {% block body_class %}template-homepage{% endblock %}
 
