Add blog post to open the December 2020 to March 2021 internship applications

--- a/home/templates/home/eligibility.html
+++ b/home/templates/home/eligibility.html
@@ -12,7 +12,7 @@
 
 {% include 'home/snippet/diversity_statement.html' %}
 
-<h2>Outreachy Eligibility Rules</h2>
+<h2 id='rules'>Outreachy Eligibility Rules</h2>
 
 {% include 'home/snippet/eligibility_rules.html' %}
 
