Clarify eligibility rules.
We often get asked:
 - which round can people who are not students apply to?
 - can I apply again if I'm not accepted as an intern?

This attempts to clarify that.

Add a separate section about which round people can apply to.

--- a/home/templates/home/eligibility_results.html
+++ b/home/templates/home/eligibility_results.html
@@ -86,7 +86,7 @@ Outreachy eligibility results
 
 	<p>After reviewing your time commitments, we have determined you do not meet our minimum free time criteria.</p>
 	{% if tcs.school_time_commitments %}
-		<p>{% with current_round=applicant.application_round %}{% include 'home/snippet/student_hemisphere.html' %}{% endwith %}</p>
+		<ul>{% with current_round=applicant.application_round %}{% include 'home/snippet/student_hemisphere.html' %}{% endwith %}</ul>
 	{% else %}
 		<p>Applicants who are not students are eligible for Outreachy
 		if they have {{ current_round.minimum_days_free_for_non_students }}
