--- a/home/templates/home/schoolinformation_form.html
+++ b/home/templates/home/schoolinformation_form.html
@@ -20,7 +20,7 @@ Update Your School Information
 			information about your school terms and academic
 			calendar.</p>
 			
-			{% include 'home/snippet/student_hemisphere.html' %}
+			<ul>{% include 'home/snippet/student_hemisphere.html' %}</ul>
 
 			<p>We have observed that some students make the following common mistakes:
 			</p>
