--- a/home/templates/home/snippet/student_hemisphere.html
+++ b/home/templates/home/snippet/student_hemisphere.html
@@ -1,3 +1,4 @@
-If you are a student of a school in the <a href="https://en.wikipedia.org/wiki/Northern_Hemisphere">Northern Hemisphere</a>, you will only be eligible for the May to August round. If you are a student of a school in the <a href="https://en.wikipedia.org/wiki/Southern_Hemisphere">Southern Hemisphere</a>, you will only be eligible for the December to March round.
-Students in India are considered to be in the northern hemisphere, regardless of where their school is located. Otherwise, if your school is near the equator, you may apply to any round.
-Students who apply from the correct hemisphere are eligible for Outreachy if they have {{ current_round.minimum_days_free_for_students }} consecutive days free from school and exams during the internship period.
+<li>If you are a student of a school in the <a href="https://en.wikipedia.org/wiki/Northern_Hemisphere">Northern Hemisphere</a>, you will only be eligible for the May to August round. Students in India are considered to be in the northern hemisphere, regardless of where their school is located.</li>
+<li>If you are a student of a school in the <a href="https://en.wikipedia.org/wiki/Southern_Hemisphere">Southern Hemisphere</a>, you will only be eligible for the December to March round.</li>
+<li>Otherwise, if your school is near the equator, you may apply to any round. We will review university term schedules on a case-by-case basis.</li>
+<li>If you are completing your last term for your degree, you may be eligible for either round, regardless of what hemisphere you are in.</li>
