Move opportunities entries to the corresponding new section

--- a/home/templates/home/opportunities.html
+++ b/home/templates/home/opportunities.html
@@ -100,20 +100,26 @@ Outreachy | Opportunities with Sponsors - Outreachy
                 <li><p><a href="http://www.x.org/wiki/BoardOfDirectors/">X.Org</a>'s board member affiliations  </p></li>
             </ul>
 
-            <h2>More opportunities</h2>
+            
+            <h2>More job boards</h2>
             <ul>
-                <li><p><a href="https://developers.google.com/open-source/gsoc/">Google Summer of Code</a> </p></li>
-                <li><p><a href="http://www.fossjobs.net">FOSS jobs board maintained by Moritz Bartl</a> </p></li>
-                <li><p>Sumana Harihareswara's round-ups of various opportunities on <a href="http://www.harihareswara.net/sumana/2014/03/06/">March 2014</a> </p></li>
-                <li><p><a href="https://www.blacksintechnology.net/jobs-board/">Blacks in Tech jobs board</a> </p></li>
-                <li><p><a href="https://www.pocitjobs.com/">People of Color in Tech jobs board</a> </p></li>
-                <li><p><a href="https://www.womenwhocode.com/jobs/">Women Who Code jobs board</a> </p></li>
-                <li><p><a href="https://careers.aises.org/">American Indian Science and Engineering Society</a> </p></li>
+                <li><a href="http://www.fossjobs.net">FOSS jobs board maintained by Moritz Bartl</a></li>
+                <li><a href="https://www.blacksintechnology.net/jobs-board/">Blacks in Tech jobs board</a></li>
+                <li><a href="https://www.pocitjobs.com/">People of Color in Tech jobs board</a></li>
+                <li><a href="https://www.womenwhocode.com/jobs/">Women Who Code jobs board</a></li>
+                <li><a href="https://careers.aises.org/">American Indian Science and Engineering Society</a></li>
             </ul>
-            The list of <a href="https://openhatch.org/wiki/Opportunities">paid opportunities in FOSS</a> maintained by OpenHatch<br/><br/><a href="http://opensourcediversity.org/">List of Open Source Diversity initiatives</a>.<br/> <p><br/></p>
-        </div>
-</div>
 
+            <h2>Paid opportunities in open source</h2>
+            <ul>
+                <li><a href="https://developers.google.com/open-source/gsoc/">Google Summer of Code</a></li>
+                <li><a href="https://developers.google.com/season-of-docs">Google Season of Docs</a></li>
+                <li><a href="https://railsgirlssummerofcode.org/">Rails Girls Summer of Code</a></li>
+                <li>List of <a href="https://wiki.openhatch.org/wiki/Opportunities">paid opportunities in FOSS</a> maintained by OpenHatch</li>
+                <li><a href="http://opensourcediversity.org/">List of Open Source Diversity initiatives</a></li>
+            </ul>
+        </div>
+    </div>
 </div>
 
 {% endblock %}
