Be clear about eligibility rules applying to *university students*
There was a question from someone who is taking an online course about
whether they are allowed to apply to the December round. Be clear that
the rules apply to university students only.

--- a/home/templates/home/snippet/student_hemisphere.html
+++ b/home/templates/home/snippet/student_hemisphere.html
@@ -1,4 +1,4 @@
-<li>If you are a student of a school in the <a href="https://en.wikipedia.org/wiki/Northern_Hemisphere">Northern Hemisphere</a>, you will only be eligible for the May to August round. Students in India are considered to be in the northern hemisphere, regardless of where their school is located.</li>
-<li>If you are a student of a school in the <a href="https://en.wikipedia.org/wiki/Southern_Hemisphere">Southern Hemisphere</a>, you will only be eligible for the December to March round.</li>
-<li>Otherwise, if your school is near the equator, you may apply to any round. We will review university term schedules on a case-by-case basis.</li>
+<li>If you are a student of a university in the <a href="https://en.wikipedia.org/wiki/Northern_Hemisphere">Northern Hemisphere</a>, you will only be eligible for the May to August round. Students in India are considered to be in the northern hemisphere, regardless of where their university is located.</li>
+<li>If you are a student of a university in the <a href="https://en.wikipedia.org/wiki/Southern_Hemisphere">Southern Hemisphere</a>, you will only be eligible for the December to March round.</li>
+<li>Otherwise, if your university is near the equator, you may apply to any round. We will review university term schedules on a case-by-case basis.</li>
 <li>If you are completing your last term for your degree, you may be eligible for either round, regardless of what hemisphere you are in.</li>
