Add second bunch of opportunities links

--- a/home/templates/home/opportunities.html
+++ b/home/templates/home/opportunities.html
@@ -99,7 +99,6 @@ Outreachy | Opportunities with Sponsors - Outreachy
                 <li><p><a href="http://www.videolan.org/contact.html">VideoLAN</a>  </p></li>
                 <li><p><a href="http://www.x.org/wiki/BoardOfDirectors/">X.Org</a>'s board member affiliations  </p></li>
             </ul>
-
             
             <h2>More job boards</h2>
             <ul>
@@ -115,8 +114,23 @@ Outreachy | Opportunities with Sponsors - Outreachy
                 <li><a href="https://developers.google.com/open-source/gsoc/">Google Summer of Code</a></li>
                 <li><a href="https://developers.google.com/season-of-docs">Google Season of Docs</a></li>
                 <li><a href="https://railsgirlssummerofcode.org/">Rails Girls Summer of Code</a></li>
+                <li><a href="https://old.dataone.org/internships">DataOne Summer Internship Program</a></li>
+                <li><a href="https://wiki.lfnetworking.org/display/LN/LFN+Mentorship+Program">Linux Foundation Networking Mentorship Program</a></li>
+                <li><a href="https://www.x.org/wiki/XorgEVoC/">X.Org Endless Vacation of Code (EVoC)</a></li>
+                <li><a href="https://www.openmainframeproject.org/projects/mentorship-program">Open Mainframe Project Mentorship Program</a></li>
+                <li><a href="https://summerofcode.be/">Open Summer of Code</a> ─ For Belgian students</li>
+                <li><a href="https://fossasia.org/internship">FOSSASIA Internship Program</a></li>
+                <li><a href="https://wiki.hyperledger.org/display/INTERN/Hyperledger+Mentorship+Program">Hyperledger Mentorship Program</a></li>
+                <li><a href="https://www.redox-os.org/rsoc/">Redox Summer of Code</a></li>
+                <li><a href="https://www.igalia.com/coding-experience/">Igalia Coding Experience Program</a></li>
+                <li><a href="https://wiki.linuxfoundation.org/lkmp">Linux Kernel Mentorship Program</a></li>
+                <li><a href="https://people.communitybridge.org/">Community Bridge Mentorship</a> (by Linux Foundation)</li>
+                
+                <li><a href="https://www.tweag.io/blog/2020-07-28-os-fellowship/">Tweag Open Source Fellowship</a></li>
+                <li><a href="https://processingfoundation.org/fellowships/">Processing Foundation Fellowship</a></li>
+
                 <li>List of <a href="https://wiki.openhatch.org/wiki/Opportunities">paid opportunities in FOSS</a> maintained by OpenHatch</li>
-                <li><a href="http://opensourcediversity.org/">List of Open Source Diversity initiatives</a></li>
+                <li>List of <a href="http://opensourcediversity.org/">Open Source Diversity initiatives</a></li>
             </ul>
         </div>
     </div>
