Allow reviewers to set essay qualities, rework essay ratings
Allow any reviewer to set a series of "essay qualities". These are
qualities that Outreachy initial application reviewers are looking for
in applicant essays.

Rework the essay rating form to only talk about whether the essay is
 - strongly compelling
 - compelling
 - weakly compelling
 - unclear
 - not compelling
 - essay answers were unrelated to questions
 - spam or trolling

Each reviewer will still be allowed to set their own opinion on whether
the essay is compelling.

--- a/home/templates/home/applicant_review_detail.html
+++ b/home/templates/home/applicant_review_detail.html
@@ -134,6 +134,8 @@
 			</div>
 		</div>
 	{% endfor %}
+	<h2>Essay Review</h2>
+	{% include 'home/snippet/applicant_review_essay_rating.html' %}
 
 	<h2>Essay Answers</h2>
 
@@ -165,7 +167,6 @@
 			</div>
 		</div>
 		{% endfor %}
-		{% include 'home/snippet/applicant_review_essay_rating.html' %}
 	{% endif %}
 
 	{% include 'home/snippet/applicant_review_actions.html' %}
