--- a/home/templates/home/applicant_review_summary.html
+++ b/home/templates/home/applicant_review_summary.html
@@ -10,11 +10,24 @@ Applicant Review Summary
 		<table class="table table-striped table-bordered">
 			{% include 'home/snippet/application_review_headers.html' %}
 			{% for app in pending_applications %}
-				{% if not app.barrierstoparticipation.applicant_should_update and not app.schoolinformation.applicant_should_update %}
+				{% if not app.barrierstoparticipation.applicant_should_update and not app.schoolinformation.applicant_should_update and not app.review_owner %}
 					{% include 'home/snippet/application_review_rows.html' %}
 				{% endif %}
 			{% endfor %}
 		</table>
+		{% if owned_apps %}
+			{% for owner_name, app_list in owned_apps %}
+			{% if app_list %}
+				<h1>Applications owned by {{ owner_name }}</h1>
+					<table class="table table-striped table-bordered">
+						{% include 'home/snippet/application_review_headers.html' %}
+						{% for app in app_list %}
+							{% include 'home/snippet/application_review_rows.html' %}
+						{% endfor %}
+					</table>
+			{% endif %}
+			{% endfor %}
+		{% endif %}
 		<h1>Pending Applications that need essay revisions</h1>
 		<table class="table table-striped table-bordered">
 			{% include 'home/snippet/application_review_headers.html' %}
