Add MLH Fellowship to opportunities page

--- a/home/templates/home/opportunities.html
+++ b/home/templates/home/opportunities.html
@@ -125,7 +125,8 @@ Outreachy | Opportunities with Sponsors - Outreachy
                 <li><a href="https://www.igalia.com/coding-experience/">Igalia Coding Experience Program</a></li>
                 <li><a href="https://wiki.linuxfoundation.org/lkmp">Linux Kernel Mentorship Program</a></li>
                 <li><a href="https://people.communitybridge.org/">Community Bridge Mentorship</a> (by Linux Foundation)</li>
-                
+
+                <li><a href="https://fellowship.mlh.io/">MLH Fellowship</a></li>
                 <li><a href="https://www.tweag.io/blog/2020-07-28-os-fellowship/">Tweag Open Source Fellowship</a></li>
                 <li><a href="https://processingfoundation.org/fellowships/">Processing Foundation Fellowship</a></li>
 
