Show number of interns funded on community progress table

--- a/home/templates/home/dashboard/staff_community_progress.html
+++ b/home/templates/home/dashboard/staff_community_progress.html
@@ -19,7 +19,7 @@
 		{% with applicants=project.get_applicants_and_contributions_list %}
 			<tr>
 				<td>{% if not p.is_approved %}{{ p.community.name }}{% else %}<a href="{% url 'community-applicants' round_slug=current_round.slug community_slug=p.community.slug %}">{{ p.community.name }}</a>{% endif %}</td>
-				<td>{{ p.get_approval_status_display }}</td>
+				<td><p>{{ p.get_approval_status_display }}</p><p>{{ p.interns_funded }} intern{{p.interns_funded|pluralize }} funded</p></td>
 				<td>{% if p.is_approved and project.is_approved %}<a href="{{ project.get_applicants_url }}">{{ project.short_title }}</a>{% else %}{{ project.short_title }}{% endif %}</td>
 				<td>{{ project.get_approval_status_display }}</td>
 			{% if not project.is_approved or not applicants %}
