--- a/home/templates/home/internship_cohort_statistics.html
+++ b/home/templates/home/internship_cohort_statistics.html
@@ -33,7 +33,7 @@ Internship Cohort Statistics
 	</thread>
 	{% for r in rounds %}
 		<tr>
-			<td>{{ r.internstarts|date:"M Y" }}</td>
+			<td>{{ r.internstarts|date:"M Y" }}<br>({{ r.statistictotalapplied.total_approved }})</td>
 			{% if not r.statisticgenderdemographics %}
 				<td>Unknown</td>
 				<td>Unknown</td>
@@ -66,7 +66,7 @@ Internship Cohort Statistics
 	</thread>
 	{% for r in rounds %}
 		<tr>
-			<td>{{ r.internstarts|date:"M Y" }}</td>
+			<td>{{ r.internstarts|date:"M Y" }}{% if r.statisticamericandemographics %}<br>({{ r.statisticamericandemographics.total_approved_american_applicants }}){% endif %}</td>
 			{% if not r.statisticamericandemographics %}
 				<td>Unknown</td>
 				<td>Unknown</td>
