Show intern payment status on intern feedback table for Outreachy organizers

--- a/home/templates/home/snippet/mentor-feedback-status.html
+++ b/home/templates/home/snippet/mentor-feedback-status.html
@@ -1,5 +1,7 @@
 {% if not mentor_status or mentor_status == intern.MISSING %}
 <button class="btn btn-secondary">missing</button>
+{% elif mentor_status == intern.PAID %}
+<button class="btn btn-secondary">paid</button>
 {% elif mentor_status == intern.PAY %}
 <button class="btn btn-success">pay</button>
 {% elif mentor_status == intern.EXTEND %}
