Only filter time commitments in graphical timeline
Stuff that happens more than 90 days before or after the internship
period is still useful to know about, it just shouldn't clutter the
graphical view of the timeline.

--- a/home/templates/home/applicant_review_detail.html
+++ b/home/templates/home/applicant_review_detail.html
@@ -198,7 +198,7 @@
 {% block extra_js %}
 <script type="text/javascript" src="https://d3js.org/d3.v3.min.js"></script>
 <script src="{% static "timeline-chart.js" %}"></script>
-{% with tcs=application.get_time_commitments current_round=application.application_round %}
+{% with tcs=application.get_relevant_time_commitments current_round=application.application_round %}
 <script>
 	new TimelineChart(document.getElementById("time-commitments-timeline"), [{
 		label: "Internship period",
