--- a/home/templates/home/community_landing.html
+++ b/home/templates/home/community_landing.html
@@ -8,7 +8,8 @@ Outreachy internships working with {{ community.name }}
 
 {% with contributions=role.application.get_projects_contributed_to %}
 
-	{% if not current_round.contributions_open.has_passed and not approved_to_see_all_project_details and not mentors_pending_projects %}
+	{% if not current_round.contributions_close.has_passed and not approved_to_see_all_project_details and not mentors_pending_projects %}
+		{% if not current_round.contributions_open.has_passed %}
 		<p>The information about this community is currently only available to approved mentors and coordinators.
 		If your participation has been approved, you may need to <a href="{% url 'login' %}?next={{ request.path|urlencode }}">log in</a>.</p>
 
@@ -16,10 +17,7 @@ Outreachy internships working with {{ community.name }}
 		Outreachy contribution period starts on {{ current_round.contributions_open }} at 4pm UTC.
 		You can sign up for an email notification when the round opens by
 		<a href="https://lists.outreachy.org/cgi-bin/mailman/listinfo/announce">subscribing to the Outreachy announcements mailing list</a>.</p>
-
-	{% comment %} If we've reached this else block, it's because the contribution period is open and the person is not a coordinator, mentor, or reviewer.{% endcomment %}
-	{% elif not current_round.contributions_close.has_passed and not role.is_approved_applicant and not mentors_pending_projects and not approved_to_see_all_project_details and not role.is_reviewer %}
-		{% if not user.comrade %}
+		{% elif not user.comrade %}
 			You may need to <a href="{% url 'login' %}?next={{ request.path|urlencode }}">log in</a> to see this information.</p>
 		{% elif role.is_potential_applicant %}
 			<p>This information is only available to applicants who have their initial application approved.
