Be more kind to people who were rejected for ineligibility

--- a/home/templates/home/eligibility_results.html
+++ b/home/templates/home/eligibility_results.html
@@ -47,14 +47,13 @@ Outreachy eligibility results
 
 {% elif role.is_rejected_applicant and role.application.reason_denied != 'TIME' and role.application.reason_denied|slice:":5" != 'ALIGN' %}
 	<h1>Initial application is not approved</h1>
-	<p>We're sorry, but after reviewing your application,
-	we have determined that you are not a strong applicant for the Outreachy internship program.
+	<p>We're sorry, but your initial application was not accepted.
 	This may be due to one of two reasons:
 	</p>
 
 	<ul>
 		<li>You may not be eligible to be paid as a contractor of a non-profit based in the United States of America. This could be due to you not being eligible to work in all the countries you are living in during your internship, you being a legal minor (under 18), visa restrictions, U.S. sanctions programs, or U.S. export restrictions.</li>
-		<li>You may have already participated in Google Summer of Code or a previous Outreachy round.</li>
+		<li>You were a Google Summer of Code intern, an Outreachy intern, or an intern with the Outreach Program for Women.</li>
 	</ul>
 
 	<p>
