Docs: add more detail about how contributions are evaluated

--- a/home/templates/home/docs/applicant_guide.html
+++ b/home/templates/home/docs/applicant_guide.html
@@ -415,6 +415,7 @@ Try to start you contributions as soon as possible.
 <p>
 Applicants are only required to make one contribution.
 However, we find that the strongest applicants make multiple contributions.
+Start with a small contribution and work your way up to more complex contributions.
 The strongest applicants are consistent about working on the project.
 They communicate regularly with their mentor to discuss what they're working on.
 </p>
@@ -422,6 +423,29 @@ They communicate regularly with their mentor to discuss what they're working on.
 <p>
 Applicants are encouraged, but not required, to contribute after the contribution period ends.
 </p>
+
+<p><b>How are applicants evaluated?</b></p>
+
+<p>
+Each Outreachy mentor will evaluate interns in a different way,
+depending on what skills the applicant needs to be successful for their project.
+</p>
+
+<p>
+Here are some example questions that mentors may use to
+evaluate your contributions:
+</p>
+
+<ul>
+	<li>Do your contributions show you have the required skills for the project?</li>
+	<li>Have your contributions shown you can complete complex work?</li>
+	<li>Have you worked on contributions that your mentor asked you to work on? Have you worked on contributions that are on the community's task list for Outreachy interns?</li>
+	<li>Have you tried using new tools or techniques? Your mentor may have some suggestions for tools, or you may find new open source tools on your own.</li>
+	<li>Have you communicated with your mentor via the public community chat?</li>
+	<li>Do you communicate in a clear, welcoming, and professional manner?</li>
+	<li>Have you asked for help when stuck in a timely manner?</li>
+	<li>Do you share your knowledge and help other applicants when they get stuck? Open source is about collaborating with other community members, and that includes other applicants and interns.</li>
+</ul>
 
 <p><a href='#toc'><u>↑ table of contents</u></a></p>
 <h2 id='final-application'><a href='#final-application'>Final application</a></h2>
