Docs: Add section on how contributions are evaluated

--- a/home/templates/home/docs/applicant_guide.html
+++ b/home/templates/home/docs/applicant_guide.html
@@ -21,6 +21,7 @@ Applicant Guide | Outreachy Documentation
 <a href="#application-prep">Preparing for the contribution period</a><br>
 <a href="#find-mentor">Finding a Mentor and an Internship Project</a><br>
 <a href="#make-contributions">Making Contributions</a><br>
+<a href="#contribution-evaluation">How are contributions evaluated?</a></br>
 <a href='#final-application'>Final application</a><br>
 <a href='#intern-announcement'>Intern announcement</a><br>
 <a href='#internship'>Internship</a><br>
@@ -424,16 +425,25 @@ They communicate regularly with their mentor to discuss what they're working on.
 Applicants are encouraged, but not required, to contribute after the contribution period ends.
 </p>
 
-<p><b>How are applicants evaluated?</b></p>
+<p><a href='#toc'><u>↑ table of contents</u></a></p>
+<h2 id='contribution-evaluation'><a href="#contribution-evaluation">How are contributions evaluated?</a></h2>
 
 <p>
-Each Outreachy mentor will evaluate interns in a different way,
-depending on what skills the applicant needs to be successful for their project.
+Each Outreachy mentor will evaluate contributions in a different way.
+It depends on what skills the applicant needs to be successful for their project.
+A programming project might want applicants to add code.
+A design project might want applicants to create graphics or art.
 </p>
 
 <p>
-Here are some example questions that mentors may use to
-evaluate your contributions:
+This applicant guide will generalize for all projects.
+When in doubt, ask your mentor how they evaluate contributions.
+Ask your mentor how they decide which applicant to accept as an intern.
+Any guidance your mentor provides should be followed, even if it differs from the Outreachy applicant guide.
+</p>
+
+<p>
+Here are some example questions that mentors may use to evaluate your contributions:
 </p>
 
 <ul>
