Docs: Add section about estimated number of interns accepted

--- a/home/templates/home/docs/applicant_guide.html
+++ b/home/templates/home/docs/applicant_guide.html
@@ -22,6 +22,7 @@ Applicant Guide | Outreachy Documentation
 <a href="#find-mentor">Finding a Mentor and an Internship Project</a><br>
 <a href="#make-contributions">Making Contributions</a><br>
 <a href="#contribution-evaluation">How are contributions evaluated?</a></br>
+<a href="#estimated-number-of-interns">Estimated number of interns</a><br>
 <a href='#final-application'>Final application</a><br>
 <a href='#intern-announcement'>Intern announcement</a><br>
 <a href='#internship'>Internship</a><br>
@@ -456,6 +457,73 @@ Here are some example questions that mentors may use to evaluate your contributi
 	<li>Have you asked for help when stuck in a timely manner?</li>
 	<li>Do you share your knowledge and help other applicants when they get stuck? Open source is about collaborating with other community members, and that includes other applicants and interns.</li>
 </ul>
+
+<p><a href='#toc'><u>↑ table of contents</u></a></p>
+<h2 id='estimated-number-of-interns'><a href="#estimated-number-of-interns">Estimated number of interns</a></h2>
+
+<p>
+On the <a href="{% url 'project-selection' %}">project list</a>, each community has an estimate of the number of interns it expects to accept.
+The estimated number of interns is the total number of interns that will be accepted for the whole community.
+It is not the number of interns per project.
+</p>
+
+<p>
+The estimated number of interns is based on the amount of sponsorship for the community and the number of mentors a community has.
+</p>
+
+<p>
+The number of interns per community is an estimate, not a hard-and-fast rule.
+It may increase or decrease during the intern selection period.
+The reasons for changing are community-specific.
+</p>
+
+<p><b>Communities accepting more interns</b></p>
+
+<p>
+Some communities will accept more interns than they estimated.
+This typically means the community has found more funding to pay intern stipends,
+and has enough mentors to support additional interns.
+</p>
+
+<p>
+Some times communities find additional sponsors, or they ask current sponsors for more money.
+Other times communities request funding from the Outreachy general fund.
+</p>
+
+<p><b>Communities accepting less interns</b></p>
+
+<p>
+Some communities may accept less interns than they expected.
+Some communities may accept no interns at all.
+</p>
+
+<p>
+Some times communities accept less interns because of a change in mentor free time.
+Mentors may decide they do not have enough free time during the internship.
+This could be because of personal reasons, like burn out, a medical condition, or a death in the family.
+Or mentors could find they simply over-estimated the amount of free time they have.
+</p>
+
+<p>
+Some times project mentors <a href="#contribution-evaluation">evaluated the contributions</a> and decided not to accept any applicants.
+</p>
+
+<p>
+Some times community coordinators make decisions about which applicants to accept.
+They may prioritize a stronger applicant for one project over a weaker applicant for a different project.
+</p>
+
+<p>
+Please show mentors respect who decide not to accept an intern.
+Mentors may not have time to provide individual feedback to all applicants who were not accepted, although some do.
+You are welcome to ask a mentor for feedback to improve your contributions next time.
+Please make sure you are asking for feedback in a constructive manner, and not trying to appeal the decision.
+</p>
+
+<p>
+Please don't ask Outreachy organizers why you were not accepted as an intern.
+They do not work directly with applicants, and often do not know why mentors did not accept an intern.
+</p>
 
 <p><a href='#toc'><u>↑ table of contents</u></a></p>
 <h2 id='final-application'><a href='#final-application'>Final application</a></h2>
