Add staff only page to show sponsor information
This is useful for figuring out which coordinators we need to email to
get new sponsor information. It's also useful to know before reaching
out to general funding sponsors, as they may already be a sponsor of a
community.

Add tests to ensure that only staff can view the sponsor information
page.

--- a/home/templates/home/dashboard/sponsor_statistics.html
+++ b/home/templates/home/dashboard/sponsor_statistics.html
@@ -10,5 +10,7 @@
 	<li>{{ current_round.number_funded_interns }} secured internship spots</li>
 </ul>
 
+<p><a href="{% url 'sponsor-info' round_slug=current_round.slug %}">Sponsor information</a> provided by coordinators.</p>
+
 <p><a href="{% url 'internship-cohort-statistics' %}">Demographic statistics</a> for current and past internship rounds.</p>
 {% endwith %}
