Add page to display information about interns
Outreachy organizers will review all selected interns. This page gives
us access to information for review. Allow application reviewers to
have access as well.

Add tests to ensure other logged in users can't access the page.

--- a/home/templates/home/dashboard/sponsor_statistics.html
+++ b/home/templates/home/dashboard/sponsor_statistics.html
@@ -13,4 +13,6 @@
 <p><a href="{% url 'sponsor-info' round_slug=current_round.slug %}">Sponsor information</a> provided by coordinators.</p>
 
 <p><a href="{% url 'internship-cohort-statistics' %}">Demographic statistics</a> for current and past internship rounds.</p>
+
+<p><a href="{% url 'review-interns' round_slug=current_round.slug %}">Intern information</a></p>
 {% endwith %}
