--- a/home/templates/home/project_applicants.html
+++ b/home/templates/home/project_applicants.html
@@ -139,12 +139,13 @@ that timeline, taking into account any time commitments the applicant has.
 {% endwith %}
 
 <h2>Applicant Details</h2>
+<hr>
 
 {% if contributions %}
 	{% regroup contributions by applicant as applicants %}
 	{% for application, applicant_contributions in applicants %}
 		{% with tcs=application.get_time_commitments applicant=application.applicant final_application=applicant_contributions.0.get_application %}
-		<h3 id="{{ applicant.pk }}">{{ applicant.public_name }}</h3>
+		<h3 id="{{ applicant.pk }}">{{ applicant.public_name }} - Personal info</h3>
 		{% if final_application and final_application.is_withdrawn %}
 			<div class="card border-warning mb-3">
 				<div class="card-header text-white bg-warning">Withdrawn Application</div>
@@ -213,16 +214,22 @@ that timeline, taking into account any time commitments the applicant has.
 				{% endif %}
 			{% endif %}
 		</ul>
-		<h2>Contributions</h2>
+		<hr>
+		<h3>{{ applicant.public_name }} - Contributions</h3>
 		{% for c in applicant_contributions %}
-			<p><i>Contribution #{{ forloop.counter }}: started {{ c.date_started }}{% if c.date_merged %}, merged {{ c.date_merged }}{% else %}. Not accepted or merged.{% endif %}</i></p>
-			<p><a href="{{ c.url }}">{{ c.url }}</a></p>
-			<pre>{{ c.description }}</pre>
-			{% if not forloop.last %}
-				<hr>
-			{% endif %}
+			<div class="card mb-3">
+				<div class="card-header">Contribution #{{ forloop.counter }}</div>
+				<div class="card-body">
+					<p class="card-text"><i>Date:</i> Started {{ c.date_started }}</p>
+					<p class="card-text"><i>Status:</i> {% if c.date_merged %}Merged on {{ c.date_merged }}{% else %}Not accepted or merged{% endif %}</p>
+					<p class="card-text"><i>URL:</i> <a href="{{ c.url }}">{{ c.url }}</a></p>
+					<p class="card-text"><i>Description:</i></p>
+					<p class="card-text">{{ c.description|linebreaksbr }}</p>
+				</div>
+			</div>
 		{% endfor %}
-		<h2>Application</h2>
+		<hr>
+		<h3>{{ applicant.public_name }} - Final Application</h3>
 
 		{% with final_application=applicant_contributions.0.get_application %}
 			{% if final_application %}
@@ -230,30 +237,100 @@ that timeline, taking into account any time commitments the applicant has.
 					<p><i>(Organizers only) Applicant found out about Outreachy:</i></p>
 					<p>{{ final_application.get_spread_the_word_display }}</p>
 				{% endif %}
-				<p><i>Their past experience with this free software community and project:</i></p>
-				<pre>{{ final_application.experience }}</pre>
-				<p><i>Their past experience with other free software communities:</i></p>
-				<pre>{{ final_application.foss_experience }}</pre>
-				<p><i>Their relevant personal or class projects that relate to this project:</i></p>
-				<pre>{{ final_application.relevant_projects }}</pre>
-				{% if final_application.community_specific_questions %}
-				<p><i>Answers to community-specific questions:</i></p>
-				<pre>{{ final_application.community_specific_questions }}</pre>
-				{% else %}
-				<p><i>Applicant has not provided answers to community-specific questions.</i></p>
-				{% endif %}
-				{% if final_application.applying_to_gsoc %}
-				<p><i>Google Summer of Code communities and projects the applicant is applying for, and the mentor contact information for those projects:</i></p>
-				<pre>{{ final_application.applying_to_gsoc }}</pre>
-				{% else %}
-				<p><i>Applicant is not applying to Google Summer of Code.</i></p>
-				{% endif %}
-				<p><i>Timeline of tasks for the internship period:</i></p>
-				<pre>{% if final_application.timeline %}{{ final_application.timeline }}{% else %}TBD{% endif %}</pre>
+				<div class="card mb-3">
+					<div class="card-header">Past experience with this free software community</div>
+					<div class="card-body">
+						<p class="card-text">{{ final_application.experience|linebreaksbr }}</p>
+					</div>
+				</div>
+				
+				<div class="card mb-3">
+					<div class="card-header">Past experience with other free software communities</div>
+					<div class="card-body">
+						<p class="card-text">{{ final_application.foss_experience|linebreaksbr }}</p>
+					</div>
+				</div>
+			
+				<div class="card mb-3">
+					<div class="card-header">Relevant personal or class projects</div>
+					<div class="card-body">
+						<p class="card-text">{{ final_application.relevant_projects|linebreaksbr }}</p>
+					</div>
+				</div>
+				<div class="card mb-3">
+					<div class="card-header">Community-specific questions</div>
+					<div class="card-body">
+						{% if final_application.community_specific_questions %}
+						<p class="card-text">{{ final_application.community_specific_questions|linebreaksbr }}</p>
+						{% else %}
+						<p class="card-text"><i>Applicant has not provided answers to community-specific questions.</i></p>
+						{% endif %}
+					</div>
+				</div>
+			
+				<div class="card mb-3">
+					{% if final_application.applying_to_gsoc %}
+						<div class="card-header text-white bg-warning">Google Summer of Code application information</div>
+						<div class="card-body">
+							<p class="card-text">
+							<i><b>Warning:</b> 
+							This applicant may be applying for Google Summer of Code (GSoC).
+							Please review their answers below to determine if they are applying.
+							</i>
+							</p>
+
+							<p class="card-text">
+							<i>
+							If the intern is applying to both GSoC and Outreachy,
+							Outreachy organizers will be in touch with the GSoC mentors and the Outreachy mentors.
+							We will work to determine whether this student should be accepted for Outreachy or GSoC.
+							</i>
+							</p>
+							<p class="card-text"><i>Applicant provided GSoC information:</i></p>
+							<p class="card-text">
+							{{ final_application.applying_to_gsoc|linebreaksbr }}</p>
+						</div>
+					{% else %}
+						<div class="card-header">Google Summer of Code application information</div>
+						<div class="card-body">
+							<p class="card-text"><i>Applicant is not applying to Google Summer of Code.</i></p>
+						</div>
+					{% endif %}
+				</div>
+			
+				<div class="card mb-3">
+					<div class="card-header">Internship project timeline</div>
+					<div class="card-body">
+						<p class="card-text">
+						
+						{% if final_application.timeline %}
+							{{ final_application.timeline|linebreaksbr }}
+						{% else %}
+							<i>Applicant has not provided an internship project timeline</i>
+						{% endif %}
+						</p>
+					</div>
+				</div>
 			{% else %}
-				<p>This applicant has not submitted an application for your project. You cannot select them as an intern unless they submit an application.
-				Please remind this applicant to submit an application at this URL:</p>
-				<p>{{ request.scheme }}://{{ request.get_host }}{{ project.get_contributions_url }}</p>
+				<div class="card mb-3">
+					<div class="card-header text-white bg-warning">No final application submitted</div>
+					<div class="card-body">
+						<p class="card-text">
+						<i>This applicant has not submitted a final application for your project.</i>
+						</p>
+						<p class="card-text">
+						You cannot select them as an intern unless they submit an application.
+						</p>
+						<p class="card-text">
+						Please remind this applicant to submit an application at this URL:
+						</p>
+
+						<p class="card-text">
+						{{ request.scheme }}://{{ request.get_host }}{{ project.get_contributions_url }}
+						</p>
+					</div>
+				</div>
+				<p>
 			{% endif %}
 		{% endwith %}
 
