Opportunities: Update Igalia's jobs website and increment sponsorship intern count

--- a/home/templates/home/opportunities.html
+++ b/home/templates/home/opportunities.html
@@ -63,6 +63,7 @@ Outreachy | Opportunities with Sponsors - Outreachy
                 <li><p><a href="https://www.gatsbyjs.com/careers/">Gatsby</a></p></li>
                 <li><p><a href="https://about.gitlab.com/jobs/">GitLab</a></p></li>
                 <li><p><a href="https://www.ffmpeg.org/">FFmpeg</a>  </p></li>
+                <li><p><a href="https://www.igalia.com/jobs/">Igalia</a>  </p></li>
                 <li><p><a href="https://mapzen.com/jobs">Mapzen</a> (OpenStreetMap jobs)  </p></li>
                 <li><p><a href="https://owncloud.com/jobs">ownCloud</a>  </p></li>
                 <li><p>Python Software Foundation's <a href="http://www.python.org/psf/members/#sponsor-members">sponsor members</a> and <a href="http://www.python.org/newjobs/">jobs board</a>   </p></li>
@@ -80,7 +81,6 @@ Outreachy | Opportunities with Sponsors - Outreachy
                 <li><p><a href="https://endlessm.com/about-us">Endless</a> (GNOME jobs)  </p></li>
                 <li><p><a href="http://evergreen-ils.org/governance/">Evergreen ILS</a>'s board member affiliations  </p></li>
                 <li><p><a href="https://careers-redhat.icims.com/jobs/search?Keyword=fedora">Fedora</a>  </p></li>
-                <li><p><a href="https://www.igalia.com/about-us">Igalia</a>  </p></li>
                 <li><p><a href="http://www.joomla.org/about-joomla/the-project/partners.html">Joomla's partners</a>  </p></li>
                 <li><p><a href="https://libav.org">Libav</a>  </p></li>
                 <li><p><a href="https://www.lightbend.com/company/careers">Lightbend</a> (Lagom jobs)  </p></li>
