--- a/home/templates/home/docs/internship_guide.html
+++ b/home/templates/home/docs/internship_guide.html
@@ -24,7 +24,7 @@ Internship Guide | Outreachy Documentation
 <hr>
 <h2 id='time-commitment'><a href='#time-commitment'>Internship Time Commitment</a></h2>
 
-{% if intern_round.internstarts|date:'Y-m-d' == '2020-05-19' or applicant_round.internstarts|date:'Y-m-d' == '2020-05-19' %}
+{% if intern_round.internstarts|date:'Y-m-d' == '2020-05-19' or intern_round.internstarts|date:'Y-m-d' == '2020-12-01' %}
 	{% include 'home/snippet/covid-19-time-policy.html' %}
 {% endif %}
 
