--- a/home/templates/home/finalmentorfeedback_form.html
+++ b/home/templates/home/finalmentorfeedback_form.html
@@ -10,6 +10,7 @@ Final mentor feedback
 
 <p>Outreachy organizers collect intern feedback from mentors three times during the Outreachy internship.</p>
 
+<hr>
 <h2>Instructions</h2>
 
 <p>Please give yourself at least 5 to 15 minutes to complete this form.</p>
@@ -28,6 +29,8 @@ Final mentor feedback
 
 <p>If an intern isn't putting in the minimum internship time commitment, we use the other metrics to come up with a plan to get the intern back on track. We also gather metrics about mentor engagement to ensure success for all Outreachy mentors.</p>
 
+<hr>
+<h2>Verify Intern Name</h2>
 <div class="card border-warning mb-3">
     <div class="card-header text-white bg-warning">
         Verify your intern name
@@ -39,32 +42,22 @@ Final mentor feedback
         </p>
     </div>
 </div>
+<hr>
 <h2>Mentor Support</h2>
 
 <form method="post" action="">
 {% csrf_token %}
 {% for field in form.visible_fields %}
 	{% if 'ask for your help' in field.label_tag %}
+		<hr>
 		<h2>Intern Feedback</h2>
 	{% endif %}
-	{% if 'Do you believe your Outreachy intern' in field.label_tag %}
-		<h2>Intern Payment Authorization</h2>
-		{% include 'home/snippet/covid-19-time-policy.html' %}
-	{% endif %}
-	{% if 'Do you believe the internship should be terminated' in field.label_tag %}
-		<h2>Internship Termination</h2>
-
-		<p>Outreachy organizers prefer not to terminate an internship unless the intern has been given an extension and is still not putting in the minimum internship time commitment.</p>
-
-		<p>Outreachy organizers view this internship as a fellowship. Mentors should not expect a certain project to be completed by the intern, but rather expect that the intern's work will be adjusted to the level of their ability, their interests, and the project's priorities throughout the internship. Outreachy organizers prefer not to fail people in the program as long as they are putting in the minimum internship time commitment.</p>
-
-		<p>We will discuss your request for this internship to be terminated with you before we contact your intern. We will work together to draft a response to your intern.</p>
-
-	{% endif %}
 	{% if 'Would you recommend a friend' in field.label_tag %}
+		<hr>
 		<h2>Survey to Help Outreachy Organizers</h2>
 	{% endif %}
 	{% if 'Please provide Outreachy organizers any additional feedback' in field.label_tag %}
+		<hr>
 		<h2>Feedback for Outreachy Organizers</h2>
 		<p>Please provide feedback for Outreachy organizers about the internship processes. If you wish to submit feedback in a more anonymous manner, you can <a href="{% url 'contact-organizers' %}">use the organizer contact form</a> and fill in your name as 'feedback', your email address as &lt;feedback@outreachy.org&gt;, and the subject as 'Anonymous Feedback'.</p>
 	{% endif %}
@@ -81,20 +74,37 @@ Final mentor feedback
 				<div class="card-footer bg-white">{{ field.help_text|safe }}</div>
 			{% endif %}
 		</div>
-	{% elif 'Should your Outreachy intern be paid' in field.label_tag %}
+	{% elif 'What actions' in field.label_tag %}
+		<hr>
+		<h2>Internship Schedule</h2>
+
+		{% with intern_selection=finalmentorfeedback.intern_selection %}
+			{% include 'home/snippet/internship_dates_table.html' %}
+
+			{% include 'home/snippet/internship_extensions_instructions.html' %}
+
+			<h2>Intern Payment, Extensions, or Termination</h2>
+			<p><a href="https://www.outreachy.org/mentor/mentor-faq/#payments-extensions-and-terminations">Please read the Mentor FAQ</a> for details about payments, internship extensions, and internship contract termination.</p>
+		{% endwith %}
+
 		<div class="form-group card">
 			{{ field.errors }}
 			<div class = "card-header">
-				Should your Outreachy intern be paid the final ${{ finalmentorfeedback.intern_selection.round.finalpayment|intcomma }} payment?
+				<label for="{{ field.id_for_label }}">{{ field.label|safe }}</label>
 			</div>
 			<div class = "card-body">
 				{{ field }}
 			</div>
 			{% if field.help_text %}
-				<div class="card-footer bg-white">Please see the temporary time commitment policy above. Base your answer on whether your intern has put in the minimum internship time commitment. </div>
+				<div class="card-footer bg-white">{{ field.help_text|safe }}</div>
 			{% endif %}
 		</div>
 	{% elif 'Do you believe your Outreachy intern is putting in a full-time' in field.label_tag %}
+		<hr>
+		<h2>Intern Time Commitment</h2>
+		<p>Please <a href="{% url 'docs-internship' %}#time-commitment">read the intern time commitment section</a> in the Internship guide. That section outlines how many hours per week interns are required to work.</p>
+		<p>If you are unsure whether your intern is putting in enough hours per week, please <a href="https://www.outreachy.org/mentor/mentor-faq/#payments-extensions-and-terminations">read the "Intern Time Commitment" section in the Mentor FAQ</a>.</p>
+		{% include 'home/snippet/covid-19-time-policy.html' %}
 		<div class="form-group card">
 			{{ field.errors }}
 			<div class = "card-header">
@@ -105,29 +115,6 @@ Final mentor feedback
 			</div>
 			{% if field.help_text %}
 				<div class="card-footer bg-white">Please see the temporary time commitment policy above.</div>
-			{% endif %}
-		</div>
-	{% elif 'Does your intern need an extension' in field.label_tag %}
-		<h2>Internship Extension</h2>
-
-		<p>Extensions should only be requested if the intern has not been putting in the minimum internship time commitment. See the table above for a definition of 'minimum time commitment'. Interns are only required to work for 12 out of 13 weeks of the internship.</p>
-
-		<p>Mentors should not ask for an internship extension if their only goal is to complete the project.</p>
-
-		<p>Outreachy organizers view this internship as a fellowship. Mentors should not expect a certain project to be completed by the intern, but rather expect that the intern's work will be adjusted to the level of their ability, their interests, and the project's priorities throughout the internship. Outreachy organizers prefer not to fail people in the program as long as they are putting in the minimum time commitment on the project.</p>
-
-		<p>We will discuss your feedback and the extension with you before we contact your intern. We will come up with a plan of action to get the internship back on track, draft a response to your intern together, and then we will contact your intern.</p>
-
-		<div class="form-group card">
-			{{ field.errors }}
-			<div class = "card-header">
-				{{ field.label_tag }}
-			</div>
-			<div class = "card-body">
-				{{ field }}
-			</div>
-			{% if field.help_text %}
-				<div class="card-footer bg-white">Sometimes interns do not put in the minimum internship time commitment. In this case, one of the options is to delay payment of their stipend and extend their internship a specific number of weeks. You will be asked to re-evaluate your intern after the extension is done.</div>
 			{% endif %}
 		</div>
 	{% else %}
