Move community requirements anchor above funding and licensing rules

--- a/home/templates/home/community_cfp.html
+++ b/home/templates/home/community_cfp.html
@@ -37,7 +37,7 @@ Call for Outreachy community coordinators and mentors
 <p>There are several different Outreachy roles:</p>
 {% include "home/snippet/roles.html" %}
 
-<h2>Who can participate?</h2>
+<h2 id="community-requirements">Community Participation Rules</h2>
 {% if not current_round.project_soft_deadline.has_passed %}
 <p>Outreachy welcomes participation from FOSS communities and people seeking to help out as Outreachy coordinators and mentors.</p>
 {% endif %}
@@ -48,7 +48,7 @@ Call for Outreachy community coordinators and mentors
 <p><u>Licensing Requirements</u></p>
 {% include "home/snippet/license-requirements.html" %}
 
-<p id="community-requirements"><u>Community Requirements</u></p>
+<p><u>Community Requirements</u></p>
 
 <p>Free and open source communities that participate in Outreachy must forward free and open source software in public interest.</p>
 
